# nutricore

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  ROADMAP.md  SECURITY.md  _registry.md  _tech-debt.md  alembic.ini  bot.py  docker-compose.prod.yml  docker-compose.yml  for_AI.md  pyproject.toml
.claude/: wrap.md
.claude/conventions/: sessions.md
.github/workflows/: secrets-scan.yml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  0325f4057134_add_primary_keys_and_timestamps.py  a0b1c2d3e4f5_enable_vector_and_personal_foods.py  b1a2c3d4e5f6_add_meal_photos_ai_analysis.py  c2d3e4f5a6b7_add_ai_call_logs.py  c9b345671e13_fix_relationships.py  d3e4f5a6b7c8_add_app_settings.py  eadb499c760d_initial.py  (+3 more)
app/: main.py
celery_app/: __init__.py  celery_app.py
docs/: README.md  RELEASE.md  _doc-revamp.md  consult-relay.md  personal-food-db.md  photo-product-lookup-round2.md  photo-product-lookup.md  product-philosophy.md
nginx/: default.conf
scripts/: test.sh
tests/: conftest.py  test_access_control.py  test_ai_call_log.py  test_api_auth.py  test_app_setting.py  test_barcode_integration.py  test_consult_relay.py  test_crud_body_metric.py  test_crud_meal.py  test_crud_personal_food.py  test_crud_user.py  test_export_meals.py  test_extract_barcode.py  test_inbound_message.py  test_meal_handler.py  test_open_food_facts_service.py  test_openai_service.py  test_personal_food_task.py  test_product_cache.py  test_product_lookup_service.py  test_schemas.py  test_subscription_gate.py
(+77 files in other folders)
