[tool.poetry]
name = "nutricore"
version = "0.1.0"
description = "Telegram bot for nutrition tracking"
authors = ["Jay Kuehn"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
celery = "^5.4.0"
python-telegram-bot = "^21.9"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
pgvector = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
